[project]
name = "snes"
version = "0.1.0"
description = "Simple Neutron-Transport Equation Solver"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "ford",
  "matplotlib",
  "mkdocs",
  "mkdocs-material",
  "numpy",
  "pre-commit>=4.5.1",
  "zensical>=0.0.43",
]

[project.optional-dependencies]
dev = [
  "pre-commit",
]
